--- a/src/app/modules/create-order/create-order.component.html
+++ b/src/app/modules/create-order/create-order.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="orderForm">
+<form [formGroup]="orderForm" (ngSubmit)="sendForm()" >
     <label for="nombreCliente">      Nombre del Cliente: </label>
         <input type="text" formControlName="nombreCliente" id="nombreCliente">
         @if(orderForm.controls['nombreCliente'].invalid
@@ -18,6 +18,18 @@
                 @if(orderForm.controls['emailCliente'].errors?.['email']){
                     <div class="text-danger">El email ingresado tiene formato no válido</div>
                 }
+            }
+
+            @if(isCheckingEmail){
+                <div class="validation-pending">
+                    Verificando emaill...
+                </div>
+            }
+
+            @if(hayErrorLimiteOrdenes()){
+                <div class="error-message">
+                    {{getMensajeErrorLimiteOrdenes() }}
+                </div>
             }
 
     <div formArrayName="productos">
@@ -59,6 +71,6 @@
         }
     </div>
     
-   
+    <button type="submit" class="btn btn-primary">Enviar</button>
 
 </form>
